[refactor] Change shows for all pop up objects on main page

--- a/AWS_Website/www_static/A1/css/A1.css
+++ b/AWS_Website/www_static/A1/css/A1.css
@@ -84,7 +84,7 @@
 			visibility: visible; 
 		}
 
-		.social:hover > .socialT, .social:active > .socialT { 
+		.social:hover > .socialT, .social:activ > .socialT { 
 			visibility: visible; 
 		}
 
@@ -280,9 +280,12 @@
     	width: 29%;
     	height: 40%;
     	display: none;
-    	-webkit-box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.4);
+    	border: 1px solid rgba(0,0,0,.15);
+			-webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
+     	box-shadow: 0 6px 12px rgba(0,0,0,.175); 
+/*    	-webkit-box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.4);
 			-moz-box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.4);
-			box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.4);
+			box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.4);*/
 			opacity: 0.93;
 			font-size: 40px;
 			font-weight: bold;
@@ -342,16 +345,13 @@
 
 	    #comments{
 			background-color: white;
-			/*border-style: ridge;*/
-			/*border-style: solid;
-    	border-color: #e6e5e5;
-			border-width: 2px;*/
-			/*box-shadow: 2px 2px 2px 2px #e6e5e5;*/
-			-webkit-box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.4);
+			border: 1px solid rgba(0,0,0,.15);
+			-webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
+     	box-shadow: 0 6px 12px rgba(0,0,0,.175); 
+	
+			/*-webkit-box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.4);
 			-moz-box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.4);
-			box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.4);
-			/*border-radius: 25px;*/
-			/*border-color: lightblue;*/
+			box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.4);*/
 			opacity: 1;
     	position: absolute;
     	bottom: 0px;
@@ -379,13 +379,12 @@
 			right: 0px;
 	   	display: none;
 			width: 29%;
-			-webkit-box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.4);
+			border: 1px solid rgba(0,0,0,.15);
+			-webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
+     	box-shadow: 0 6px 12px rgba(0,0,0,.175); 
+/*			-webkit-box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.4);
 			-moz-box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.4);
-			box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.4);
-			/*border-style: solid;
-			border-width: 1px;
-			border-color: lightblue;
-			border-radius: 25px;*/
+			box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.4);*/
 			right: 0px;
 	   	height: 60%;
 
