[refactor] Fix chat 'Your Name' input field to be consistent with rest of chat

--- a/AWS_Website/www_static/css/app.css
+++ b/AWS_Website/www_static/css/app.css
@@ -5,6 +5,12 @@
     width: 100%;
     height: 95%;
 }
+
+/*chat sign up "your name"*/
+.commentsInput {
+  width: 90% !important;
+}
+
 .main {
   padding-top: 10px;
   text-align: center;
