--- a/AWS_Website/www_static/css/style.css
+++ b/AWS_Website/www_static/css/style.css
@@ -2051,7 +2051,7 @@ body.landing #header {
 
 #banner {
     background-attachment: fixed;
-    background-image: url("../img/Slite_Background.gif");
+    background-image: url("../img/Slite_Background6.jpg");
     background-position: center center;
     background-size: cover;
     box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.25);
