Removed scrollbars from hash template

--- a/AWS_Website/www_static/A1/css/A1.css
+++ b/AWS_Website/www_static/A1/css/A1.css
@@ -1,7 +1,7 @@
 body {
 	/* background-color:rgba(0,0,255,0.3); */
 	font-family: 'Lato', sans-serif;
-	overflow-y: scroll;
+	overflow-y: hidden;
 	overflow-x: hidden;
 }
 
