--- a/AWS_Website/www_static/A1/css/A1.css
+++ b/AWS_Website/www_static/A1/css/A1.css
@@ -811,9 +811,10 @@ left: 0%;
 	color: rgb(69, 166, 247);
 }
 #navButtons {
-    bottom: 0;
+    bottom: -4;
     position: absolute;
     width: 100%;
+    text-align: center;
 }
 
 .topRow {
@@ -876,10 +877,10 @@ left: 0%;
   cursor: pointer;
   margin-top: 10px;
   margin-bottom: 10px;
-/*basic styles*/ width: 250px; height: 50px; color: #fff; text-align: center; font-size: 30px; line-height: 50px; 
+/*basic styles*/ width: 210px; height: 50px; color: #fff; text-align: center; font-size: 24px; line-height: 50px; 
 /*border styles*/ -moz-border-radius: 30px; -webkit-border-radius: 30px; border-radius: 30px; -moz-box-shadow:inset 0 0 10px #000000; -webkit-box-shadow:inset 0 0 10px #000000; box-shadow:inset 0 0 10px #000000;
 } 
-.button p { font-size: 30px; line-height: 50px; font-family: “HelveticaNeue-Light”, “Helvetica Neue Light”, “Helvetica Neue”, Helvetica, Arial, “Lucida Grande”, sans-serif; font-weight: 300; text-shadow: 0px 0px 3px #555; } 
+.button p { font-size: 24px; line-height: 50px; font-family: “HelveticaNeue-Light”, “Helvetica Neue Light”, “Helvetica Neue”, Helvetica, Arial, “Lucida Grande”, sans-serif; font-weight: 300; text-shadow: 0px 0px 3px #555; } 
 a { text-decoration: none; color: fff; } 
 .button:hover { -moz-box-shadow:inset 0 0 50px #000000; -webkit-box-shadow:inset 0 0 50px #000000; box-shadow:inset 0 0 50px #000000; } 
 .button p:hover { text-shadow: 0px 0px 3px #888; }
