--- a/AWS_Website/www_static/A1/css/A1.css
+++ b/AWS_Website/www_static/A1/css/A1.css
@@ -75,7 +75,7 @@ body {
 }
 
 .menuSubmenu {
-	/*z-index: 3;*/
+	z-index: 6;
 	border: 1px solid rgba(0,0,0,.15);
 	-webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
 	box-shadow: 0 6px 12px rgba(0,0,0,.175);
@@ -810,18 +810,24 @@ left: 0%;
 	cursor: pointer;
 	color: rgb(69, 166, 247);
 }
+#currentSlide {
+	position: absolute;
+	top: 0px;
+}
 #navButtons {
     bottom: -4;
     position: absolute;
     width: 100%;
     text-align: center;
+    z-index: 4;
 }
 
 .topRow {
     height: 7%;
 }
 .midRow {
-    height: 92%;
+    /*height: 92%;*/
+    height: 100%;
 }
 .botRow {
     /*height: 8%;*/
@@ -864,6 +870,14 @@ left: 0%;
 #speech {
 }
 
+#overlay {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	border: none;
+	z-index: 0;
+}    
+
 .button_unpressed{
 	background-color: #125182; 
 	background: -moz-linear-gradient(top, #125182, #1269ab 50%, #004375 51%, #00345b);
@@ -905,6 +919,10 @@ a { text-decoration: none; color: fff; }
   margin-top:2px;
   margin-bottom: 2px;
   cursor: pointer;
+}
+.wrap {
+    padding: 0;
+    overflow: hidden;
 }
 
 /* END NEXT,PREV BUTTONS */
