--- a/AWS_Website/www_static/A1/css/A1.css
+++ b/AWS_Website/www_static/A1/css/A1.css
@@ -266,12 +266,17 @@ body {
 		top:0px;
 		z-index: 2;
 	}
-    
+
 	#drawCanvas {
 		position: absolute;
 		border: none;
-		z-index: 1;
+		z-index: 3;
 		pointer-events: none;
+		border:1px solid #FF0000;
+		top: 0px;
+		left: 0px;
+		width: 100%;
+		height: 100%;
   	}
 
 #videochat{
@@ -802,7 +807,7 @@ left: 0%;
 #timeDisplay {
 	/*position: absolute;
 	right: 5px;
-	float: right;	
+	float: right;
 	opacity:0.7;*/
 	font-size: 6.3vmin;
 	text-align: center;
@@ -848,12 +853,12 @@ left: 0%;
 }
 
 #prev {
-} 
+}
 #prev:active {
 	border-color: red;
 }
 #next {
-}   
+}
 #next:active {
 	border-color:red;
 }
@@ -876,32 +881,32 @@ left: 0%;
 	height: 100%;
 	border: none;
 	z-index: 0;
-}    
+}
 
 .button_unpressed{
     border: 1px;
     background: rgba(0, 0, 0, 0) linear-gradient(to bottom, rgba(125, 185, 232, 1) 0%, rgba(66, 139, 202, 1) 99%) repeat scroll 0 0;
     border-color: #357ebd;
     /*
-	background-color: #125182; 
+	background-color: #125182;
 	background: -moz-linear-gradient(top, #125182, #1269ab 50%, #004375 51%, #00345b);
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #125182), color-stop(.5, #1269ab), color-stop(.51, #004375), to(#00345b)); 
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #125182), color-stop(.5, #1269ab), color-stop(.51, #004375), to(#00345b));
     */
 }
 .button_pressed{
-	background: gray; 
+	background: gray;
 }
 
-.button { 
+.button {
   cursor: pointer;
   margin-top: 10px;
   margin-bottom: 10px;
-/*basic styles*/ width: 150px; height: 50px; color: #fff; text-align: center; font-size: 18px/*24px*/; line-height: 50px; 
+/*basic styles*/ width: 150px; height: 50px; color: #fff; text-align: center; font-size: 18px/*24px*/; line-height: 50px;
 /*border styles*/ -moz-border-radius: 6px; -webkit-border-radius: 6px; border-radius: 6px/*30px*/; /*-moz-box-shadow:inset 0 0 10px #000000; -webkit-box-shadow:inset 0 0 10px #000000; box-shadow:inset 0 0 10px #000000;*/
-} 
-.button p { font-size: 18px; line-height: 50px; font-family: “HelveticaNeue-Light”, “Helvetica Neue Light”, “Helvetica Neue”, Helvetica, Arial, “Lucida Grande”, sans-serif; font-weight: 300; text-shadow: 0px 0px 3px #555; } 
-a { text-decoration: none; color: fff; } 
-.button:hover { -moz-box-shadow:inset 0 0 50px #000000; -webkit-box-shadow:inset 0 0 50px #000000; box-shadow:inset 0 0 50px #000000; } 
+}
+.button p { font-size: 18px; line-height: 50px; font-family: “HelveticaNeue-Light”, “Helvetica Neue Light”, “Helvetica Neue”, Helvetica, Arial, “Lucida Grande”, sans-serif; font-weight: 300; text-shadow: 0px 0px 3px #555; }
+a { text-decoration: none; color: fff; }
+.button:hover { -moz-box-shadow:inset 0 0 50px #000000; -webkit-box-shadow:inset 0 0 50px #000000; box-shadow:inset 0 0 50px #000000; }
 .button p:hover { text-shadow: 0px 0px 3px #888; }
 
 .roundButton{
