--- a/MOBILE_REMOTE_CONTROL/prezera/platforms/ios/www/css/index.css
+++ b/MOBILE_REMOTE_CONTROL/prezera/platforms/ios/www/css/index.css
@@ -6,7 +6,7 @@
 * { margin: 0; padding: 0;}
 
 /*makes height be full screen */
-html, body {height: 100%; }
+html, body {height: 100%; width: 100%}
 
 body {
     font-size: 180%;
