Draw area border removed

--- a/AWS_Website/www_static/A1/css/A1.css
+++ b/AWS_Website/www_static/A1/css/A1.css
@@ -272,7 +272,7 @@ body {
 		border: none;
 		z-index: 3;
 		pointer-events: none;
-		border:1px solid #FF0000;
+		border:1px solid #FFFFFF;
 		top: 0px;
 		left: 0px;
 		width: 100%;
