--- a/AWS_Website/www_static/A1/css/A1.css
+++ b/AWS_Website/www_static/A1/css/A1.css
@@ -303,6 +303,30 @@ body {
 	background-color: white;
 }
 
+#recording{
+	position: absolute;
+	z-index: 2;
+	left: 0px;
+	top: 0px;
+	width: 25.5%;
+	height: 40%;
+	display: none;
+	border: 1px solid rgba(0,0,0,.15);
+	-webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
+	box-shadow: 0 6px 12px rgba(0,0,0,.175);
+/*    	-webkit-box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.4);
+	-moz-box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.4);
+	box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.4);*/
+	opacity: 0.93;
+	font-size: 40px;
+	font-weight: bold;
+	color: white;
+	line-height: normal;
+	overflow-x: hidden;
+	overflow-y: hidden;
+	background-color: white;
+}
+
 #videos-container{
 	margin-bottom: 10px;
 	margin-left: 5px;
