--- a/AWS_Website/www_static/css/mainPage.css
+++ b/AWS_Website/www_static/css/mainPage.css
@@ -16,7 +16,7 @@ html {
       height: 100%;
     }
     body {
-      background-image: url("../img/Slite_Background.jpg");
+      /*background-image: url("../img/Slite_Background.jpg");*/
       padding: 0;
       text-align: center;
       font-family: 'open sans';
