--- a/AWS_Website/www_static/new_template/css/stylish-portfolio.css
+++ b/AWS_Website/www_static/new_template/css/stylish-portfolio.css
@@ -159,7 +159,7 @@ hr.small {
     position: relative;
     width: 100%;
     height: 100%;
-    background: url(../img/bg.jpg) no-repeat center center scroll;
+    background: url(../img/bg.png) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -240,4 +240,59 @@ hr.small {
 
 footer {
     padding: 100px 0;
+}
+
+
+/* Button Upload Presentation*/
+.uploadfile {
+    width: 250px;
+    height: 48px;
+    font-size: 18px;
+
+    cursor:pointer;
+    position: relative;
+    display: inline-block;
+    margin: 0;
+ }
+
+.uploadfile :hover {
+    cursor:pointer;
+}
+
+input.renameSlide {
+    width: 200px;
+    display: inline-block;
+    font-size: 10px;
+}
+
+.uploadfile input[type="file"] {
+    cursor: inherit;
+    width: inherit;
+    height: inherit;
+    position: absolute;
+    top: 0;
+    left: 0;
+    font-size: 0;
+    background: none;
+    border: none;
+    opacity: 0;
+}
+
+.uploadButton {
+    cursor: inherit;
+    width: inherit;
+    display: block;
+    -moz-border-radius:5px;
+    -webkit-border-radius:5px;
+    color:#333333;
+    font-family: 'Lato', sans-serif;
+    font-size: inherit;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+.uploadButton:hover {
+    cursor:pointer;
+
+
 }
