[refactor] Comment out slides, update layout

--- a/AWS_Website/www_static/new_template/css/stylish-portfolio.css
+++ b/AWS_Website/www_static/new_template/css/stylish-portfolio.css
@@ -189,7 +189,7 @@ hr.small {
     width: 100%;
     height: 400px;
     color: #fff;
-    background: url(../img/callout.jpg) no-repeat center center scroll;
+    background: url(../img/people.jpg) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -294,5 +294,10 @@ input.renameSlide {
 .uploadButton:hover {
     cursor:pointer;
 
+}
 
+.product {
+    width: 50%;
+    height: 300px;
+    background: url(../img/meeting.jpg) no-repeat center center scroll;
 }
