--- a/AWS_Website/www_static/new_template/css/stylish-portfolio.css
+++ b/AWS_Website/www_static/new_template/css/stylish-portfolio.css
@@ -238,6 +238,93 @@ hr.small {
 
 /* Footer */
 
+/* uploadDialog */
+.uploadDialog {
+    position: fixed;
+    font-family: 'Raleway', sans-serif;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: rgba(0,0,0,0.8);
+    z-index: 99999;
+    opacity:0;
+    -webkit-transition: opacity 400ms ease-in;
+    -moz-transition: opacity 400ms ease-in;
+    transition: opacity 400ms ease-in;
+    pointer-events: none;
+}
+
+.uploadDialog:target {
+    opacity:1;
+    pointer-events: auto;
+}
+
+.uploadDialog > div {
+    width: 50vw;
+    min-width: 100px;
+    max-width: 1000px;
+    padding: 4vh 3.5vw 6vh 3.5vw;
+    border-radius: 1em;
+    margin-left: 25vw;
+    margin-top: 35vh;
+
+    position: relative;
+    background: #fff;
+    background: -moz-linear-gradient(#fff, #999);
+    background: -webkit-linear-gradient(#fff, #999);
+    background: -o-linear-gradient(#fff, #999);
+}
+
+.closeUpload {
+    line-height: 4.3vh;
+    top: -2.0vh;
+    width: 2.3vw;
+    right: -1.2vw;
+    -webkit-border-radius: 1.5em;
+    -moz-border-radius: 1.5em;
+    border-radius: 1.5em;
+
+    background: #606061;
+    color: #FFFFFF;
+    position: absolute;
+    text-align: center;
+    text-decoration: none;
+    font-weight: bold;
+    -moz-box-shadow: 1px 1px 3px #000;
+    -webkit-box-shadow: 1px 1px 3px #000;
+    box-shadow: 1px 1px 3px #000;
+}
+
+.closeUpload:hover { background: #00d9ff; }
+
+#progressbar {
+    margin-top: 1vh;
+    height:     7vh;
+    background: #474747;
+
+    /*background-color: blue;*/
+}
+
+#uploadLabel {
+    font-weight: bold;
+    color: blue;
+    /*font-size: 24px;*/
+    font-size: 1.8vw;
+}
+
+/*
+.ui-dialog-titlebar-close {
+    display: none;
+}
+*/
+.ui-progressbar .ui-widget-header {
+     color: red;
+     background: blue repeat-x 50% 50%;
+}
+
+
+
 /* Button Upload Presentation*/
 .uploadfile {
     width: 250px;
@@ -320,6 +407,8 @@ input.renameSlide {
     background: rgba(255,255,255,1);
 
 }
+
+
 
 
 /*VIDEO*/
