--- a/AWS_Website/www_static/A1/css/A1.css
+++ b/AWS_Website/www_static/A1/css/A1.css
@@ -519,6 +519,19 @@ body {
 	display: none;
 }
 
+#orientationOverlay {
+	opacity:    0.9;
+	background: black;
+	width:      100%;
+	height:     100%;
+	z-index:    10;
+	top:        0;
+	left:       0;
+	position:   fixed;
+	color: black;
+	display: none;
+}
+
 #pleaseWaitForScreenSharing {
 	display: none;
 }
@@ -966,5 +979,14 @@ a { text-decoration: none; color: fff; }
 	display: none;
 	z-index: 3;
 }
+
+.centerText {
+    position: absolute;
+    width: 100px;
+    top: 50%;
+    left: 50%;
+    margin-left: -50px; /* margin is -0.5 * dimension */
+    margin-top: -25px;
+}​
 
 /* END NEXT,PREV BUTTONS */
