--- a/AWS_Website/www_static/new_template/css/stylish-portfolio.css
+++ b/AWS_Website/www_static/new_template/css/stylish-portfolio.css
@@ -330,6 +330,11 @@ background: linear-gradient(to bottom right, #02107B 10%, #0062DA 90%);; /* Stan
   top: 50%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
+  width: 250px;
+  height: 48px;
+  font-size: 18px;
+  cursor:pointer;
+  display: inline-block;
  }
 
 .uploadfile :hover {
