--- a/AWS_Website/www_static/new_template/css/stylish-portfolio.css
+++ b/AWS_Website/www_static/new_template/css/stylish-portfolio.css
@@ -482,6 +482,24 @@ video#bgvid {
     -o-background-size: cover;
 }
 
+.simplePage {
+  position: absolute;
+  top: 10%;
+  left: 10px;
+  width: 99%;
+}
+
+a {
+  color: #FFD772;
+}
+
+a:hover {
+	color: #54A7D9;
+}
+
+table {
+	color: #C4CAE3;
+}
 
 /*.uploadDialog {
     position: fixed;
