--- a/AWS_Website/www_static/new_template/css/stylish-portfolio.css
+++ b/AWS_Website/www_static/new_template/css/stylish-portfolio.css
@@ -501,6 +501,48 @@ table {
 	color: #C4CAE3;
 }
 
+.uploadButton {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  width: 250px;
+  color: #FFFFFF;
+  border-color: #4D68B6;
+  font-weight: normal;
+  background-color: transparent;
+}
+
+.uploadButton:hover {
+  color: red;
+  border-color: red;
+  font-weight: normal;
+  background-color: #FFFFFF;
+}
+
+.btn-file {
+  position: relative;
+  overflow: hidden;
+}
+.btn-file input[type=file] {
+  position: absolute;
+  top: 0;
+  right: 0;
+  min-width: 100%;
+  min-height: 100%;
+  font-size: 100px;
+  text-align: right;
+  filter: alpha(opacity=0);
+  opacity: 0;
+  background: red;
+  cursor: inherit;
+  display: block;
+}
+input[readonly] {
+  background-color: white !important;
+  cursor: text !important;
+}
+
 /*.uploadDialog {
     position: fixed;
     font-family: 'Raleway', sans-serif;
