--- a/AWS_Website/www_static/new_template/css/stylish-portfolio.css
+++ b/AWS_Website/www_static/new_template/css/stylish-portfolio.css
@@ -330,9 +330,6 @@ background: linear-gradient(to bottom right, #02107B 10%, #0062DA 90%);; /* Stan
   top: 50%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
-  width: 250px;
-  height: 48px;
-  font-size: 18px;
   cursor:pointer;
   display: inline-block;
  }
@@ -507,9 +504,11 @@ table {
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
   width: 250px;
+  height: 50px;
   color: #FFFFFF;
   border-color: #4D68B6;
   font-weight: normal;
+  vertical-align: middle;
   background-color: transparent;
 }
 
@@ -520,28 +519,7 @@ table {
   background-color: #FFFFFF;
 }
 
-.btn-file {
-  position: relative;
-  overflow: hidden;
-}
-.btn-file input[type=file] {
-  position: absolute;
-  top: 0;
-  right: 0;
-  min-width: 100%;
-  min-height: 100%;
-  font-size: 100px;
-  text-align: right;
-  filter: alpha(opacity=0);
-  opacity: 0;
-  background: red;
-  cursor: inherit;
-  display: block;
-}
-input[readonly] {
-  background-color: white !important;
-  cursor: text !important;
-}
+
 
 /*.uploadDialog {
     position: fixed;
