--- a/AWS_Website/www_static/A1/css/A1.css
+++ b/AWS_Website/www_static/A1/css/A1.css
@@ -272,8 +272,8 @@ body {
 		z-index: 3;
 		pointer-events: none;
 		border:1px solid #FFFFFF;
-		top: 0px;
-		left: 0px;
+		top: 0px !important;
+		left: 0px !important;
 		width: 100%;
 		height: 100%;
   	}
