--- a/AWS_Website/www_static/new_template/css/stylish-portfolio.css
+++ b/AWS_Website/www_static/new_template/css/stylish-portfolio.css
@@ -505,11 +505,11 @@ table {
   transform: translateX(-50%) translateY(-50%);
   width: 250px;
   height: 50px;
-  color: #FFFFFF;
   border-color: #4D68B6;
   font-weight: normal;
   vertical-align: middle;
-  background-color: transparent;
+  background: #00147C;
+  color: #8C8B8E;
 }
 
 .uploadButton:hover {
