Changed upload button text color

--- a/AWS_Website/www_static/new_template/css/stylish-portfolio.css
+++ b/AWS_Website/www_static/new_template/css/stylish-portfolio.css
@@ -493,7 +493,7 @@ table {
   font-weight: normal;
   vertical-align: middle;
   background: #00147C;
-  color: #5D80C0;
+  color: #84A4E0;
 }
 
 .uploadButton:hover {
