--- a/AWS_Website/www_static/new_template/css/stylish-portfolio.css
+++ b/AWS_Website/www_static/new_template/css/stylish-portfolio.css
@@ -81,6 +81,10 @@ hr.small {
     transition: all 0.4s ease 0s;
 }
 
+@media all and (min-width:200px) and (max-width: 1024px) {
+
+}
+
 .sidebar-nav {
     position: absolute;
     top: 0;
@@ -422,7 +426,7 @@ video#bgvid {
     background-size: cover;
 }
 
-@media screen and (max-device-width: 800px) {
+@media screen and (max-device-width: 1024px) {
         video#bgvid {
         position: fixed;
         top: 50%;
@@ -435,6 +439,42 @@ video#bgvid {
         transform: translateX(-50%) translateY(-50%);
         background-size: cover;
     }
+	
+	#sidebar-wrapper {
+		z-index: 1000;
+		position: fixed;
+		right: 0;
+		width: 250px;
+		height: 100%;
+		margin-right: -250px;
+		overflow-y: auto;
+		background: #222;
+		-webkit-transition: all 0.4s ease 0s;
+		-moz-transition: all 0.4s ease 0s;
+		-ms-transition: all 0.4s ease 0s;
+		-o-transition: all 0.4s ease 0s;
+		transition: all 0.4s ease 0s;
+		font-size: 1.3em
+	}
+	.uploadButton {
+	  position: absolute;
+	  top: 50%;
+	  left: 50%;
+	  transform: translateX(-50%) translateY(-50%);
+	  width: 250px;
+	  height: 50px;
+	  border-color: #4D68B6;
+	  font-weight: normal;
+	  vertical-align: middle;
+	  background: #00147C;
+	  color: #84A4E0;
+	  font-size: 1.3em;
+	}
+	
+	.mainLogo {
+		
+		font-size: 5em;
+	}
 
 }
 
