--- a/AWS_Website/www_static/new_template/css/stylish-portfolio.css
+++ b/AWS_Website/www_static/new_template/css/stylish-portfolio.css
@@ -16,6 +16,12 @@ body {
     font-family: "Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
+.textFieldTitle {
+    color: grey;
+    font-size: 20px;
+    text-align: center;
+}
+
 #noticeForm{
     position:fixed;
     margin-top:6px;
@@ -107,7 +113,7 @@ hr.small {
 .sidebar-nav {
     position: absolute;
     top: 0;
-    width: 250px;
+    width: 450px;
     margin: 0;
     padding: 0;
     list-style: none;
@@ -159,7 +165,7 @@ hr.small {
 
 #sidebar-wrapper.active {
     right: 250px;
-    width: 250px;
+    width: 450px;
     -webkit-transition: all 0.4s ease 0s;
     -moz-transition: all 0.4s ease 0s;
     -ms-transition: all 0.4s ease 0s;
@@ -436,7 +442,7 @@ input.renameSlide {
 }
 
 form {
-    width: 20em;
+    width: 90%;
 }
 
 /*VIDEO*/
