--- a/AWS_Website/www_static/A1/css/A1.css
+++ b/AWS_Website/www_static/A1/css/A1.css
@@ -5,6 +5,21 @@ body {
 	overflow-x: hidden;
 }
 
+#getPassResult{
+	font-size: 30px;
+}
+
+#backButtonMobile{
+	position: fixed;
+	top: 0px;
+	left:0px;
+	color: blue;
+	text-decoration: underline;
+	display: none;
+	font-size: 10px;
+	color: black;
+}
+
 .fa-1 {
 	color: #c4c4c4;
 }
