--- a/AWS_Website/www_static/new_template/css/stylish-portfolio.css
+++ b/AWS_Website/www_static/new_template/css/stylish-portfolio.css
@@ -92,10 +92,10 @@ body {
 
 
 .backLink{
-    float:left;
     position:fixed; 
     top:0px;
     left:5px;
+    font-size: 14px;
     color:black;
     text-decoration:underline;
 }
