--- a/AWS_Website/www_static/css/rs-default.css
+++ b/AWS_Website/www_static/css/rs-default.css
@@ -1,8 +1,8 @@
 /******************************
 *
-*  RoyalSlider Default Skin 
+*  RoyalSlider Default Skin
 *
-*    1. Arrows 
+*    1. Arrows
 *    2. Bullets
 *    3. Thumbnails
 *    4. Tabs
@@ -10,11 +10,11 @@
 *    6. Play/close video button
 *    7. Preloader
 *    8. Caption
-*    
+*
 *  Sprite: '../img/rs-default.png'
 *  Feel free to edit anything
 *  If you don't some part - just delete it
-* 
+*
 ******************************/
 
 
@@ -24,7 +24,7 @@
 .rsDefault .rsSlide,
 .rsDefault .rsVideoFrameHolder,
 .rsDefault .rsThumbs {
-	
+
 	color: #FFF;
 }
 
@@ -46,7 +46,7 @@
 .rsDefault.rsVer .rsArrow {
 	width: 100%;
 	height: 44px;
-	
+
 }
 .rsDefault.rsVer .rsArrowLeft { top: 0; left: 0; }
 .rsDefault.rsVer .rsArrowRight { bottom: 0;  left: 0; }
@@ -54,22 +54,22 @@
 .rsDefault.rsHor .rsArrowLeft { left: 0; top: 0; }
 .rsDefault.rsHor .rsArrowRight { right: 0; top:0; }
 
-.rsDefault .rsArrowIcn {		
+.rsDefault .rsArrowIcn {
 	width: 32px;
 	height: 32px;
 	top: 50%;
 	left: 50%;
-	margin-top:-16px;	
+	margin-top:-16px;
 	margin-left: -16px;
 
-	position: absolute;	
-	cursor: pointer;	
+	position: absolute;
+	cursor: pointer;
 	background: url('../img/rs-default.png');
 
 	background-color: #000;
 	background-color: rgba(0,0,0,0.75);
 	*background-color: #000;
-	
+
 	border-radius: 2px;
 }
 .rsDefault .rsArrowIcn:hover {
@@ -98,7 +98,7 @@
 	bottom: 0;
 	width: 100%;
 	height: auto;
-	margin: 0 auto; 
+	margin: 0 auto;
 
 	background: #000;
 	background: rgba(0,0,0,0.75);
@@ -111,7 +111,7 @@
 	width: 8px;
 	height: 8px;
 	display: inline-block;
-	*display:inline; 
+	*display:inline;
 	*zoom:1;
 	padding: 6px 5px 6px;
 }
@@ -201,8 +201,8 @@
 	width: 20px;
 	position: absolute;
 	display: block;
-	cursor: pointer;	
-	z-index: 21;	
+	cursor: pointer;
+	z-index: 21;
 	background: #000;
 	background: rgba(0,0,0,0.75);
 }
@@ -219,15 +219,15 @@
 .rsDefault.rsWithThumbsHor .rsThumbsArrowLeft { left: 0; top: 0; }
 .rsDefault.rsWithThumbsHor .rsThumbsArrowRight { right: 0; top:0; }
 
-.rsDefault .rsThumbsArrowIcn {		
+.rsDefault .rsThumbsArrowIcn {
 	width: 16px;
 	height: 16px;
 	top: 50%;
 	left: 50%;
-	margin-top:-8px;	
+	margin-top:-8px;
 	margin-left: -8px;
-	position: absolute;	
-	cursor: pointer;	
+	position: absolute;
+	cursor: pointer;
 	background: url('../img/rs-default.png');
 }
 
@@ -283,14 +283,14 @@
 	text-decoration: none;
 
 	background-color: #FFF;
-	background-image: -webkit-linear-gradient(top, #fefefe, #f4f4f4); 
+	background-image: -webkit-linear-gradient(top, #fefefe, #f4f4f4);
 	background-image:    -moz-linear-gradient(top, #fefefe, #f4f4f4);
 	background-image:         linear-gradient(to bottom, #fefefe, #f4f4f4);
 
 	-webkit-box-shadow: inset 1px 0 0 #fff;
 	box-shadow: inset 1px 0 0 #fff;
 
-	*display:inline; 
+	*display:inline;
 	*zoom:1;
 }
 .rsDefault .rsTab:first-child {
@@ -299,7 +299,7 @@
 	-webkit-border-bottom-left-radius: 4px;
 	border-bottom-left-radius: 4px;
 }
-.rsDefault .rsTab:last-child { 
+.rsDefault .rsTab:last-child {
 	-webkit-border-top-right-radius: 4px;
 	border-top-right-radius: 4px;
 	-webkit-border-bottom-right-radius: 4px;
@@ -307,12 +307,12 @@
 
 	border-right:  1px solid #cfcfcf;
 }
-.rsDefault .rsTab:active { 
-	border: 1px solid #D9D9DD;   
+.rsDefault .rsTab:active {
+	border: 1px solid #D9D9DD;
 	background-color: #f4f4f4;
 	box-shadow:  0 1px 4px rgba(0, 0, 0, 0.2) inset;
 }
-.rsDefault .rsTab.rsNavSelected { 
+.rsDefault .rsTab.rsNavSelected {
 	color: #FFF;
 	border: 1px solid #999;
 	text-shadow: 1px 1px #838383;
@@ -342,7 +342,7 @@
 	display: block;
 	position: absolute;
 	cursor: pointer;
-	
+
 }
 .rsDefault .rsFullscreenIcn {
 	display: block;
@@ -388,7 +388,7 @@
 	height:64px;
 	-webkit-border-radius: 4px;
 	border-radius: 4px;
-	
+
 	-webkit-transition: .3s;
 	-moz-transition: .3s;
 	transition: .3s;
@@ -416,7 +416,7 @@
 	cursor: pointer;
 	-webkit-backface-visibility: hidden;
 	-webkit-transform: translateZ(0);
-	
+
 }
 .rsDefault .rsCloseVideoBtn.rsiOSBtn {
 	top: -38px;
@@ -447,12 +447,12 @@
 .rsDefault .rsPreloader {
 	width:20px;
 	height:20px;
-	background-image:url(../preloaders/preloader-white.gif);
+	background-image:url(../A1/img/loading_spinner.gif);
 
 	left:50%;
 	top:50%;
 	margin-left:-10px;
-	margin-top:-10px;	
+	margin-top:-10px;
 }
 
 
