--- a/AWS_Website/www_static/A1/css/A1.css
+++ b/AWS_Website/www_static/A1/css/A1.css
@@ -176,6 +176,7 @@ body {
 	z-index: 0;
 	width: 100%;
 	height: 100%;
+	float: right;
 }
 
 .videoGallery .rsTmb {
@@ -357,11 +358,11 @@ body {
 }
 
 #screensharing{
-	position: fixed;
+	position: absolute;
 	right: 0px;
-	top: 0px;
-	width: 55%;
-	height: 98%;
+	top: 5%;
+	width: 100%;
+	height: 100%;
 	background-color: white;
 	display: none;
 	z-index: 1;
@@ -418,7 +419,7 @@ body {
 }
 
  #personalNotes{
-	position: absolute;
+	position: fixed;
 	bottom: 0px;
 	z-index: 2;
 	right: 0px;
