--- a/AWS_Website/www_static/new_template/css/stylish-portfolio.css
+++ b/AWS_Website/www_static/new_template/css/stylish-portfolio.css
@@ -80,9 +80,9 @@ body {
     position: relative;
     display: inline-block;
     vertical-align: middle;
-    margin-top: 30px;
+    margin-top: 10px;
     width: 100%;
-}
+  }
 
 .textFieldTitle {
     color: grey;
@@ -97,7 +97,7 @@ body {
 
 
 .backLink{
-    position:fixed; 
+    position:fixed;
     top:0px;
     left:5px;
     font-size: 14px;
@@ -113,6 +113,7 @@ body {
 .remoteTitle{
     text-align: center;
     font-size: 30px;
+    margin-top: 4%;
 }
 
 .text-vertical-center {
@@ -586,11 +587,13 @@ video#bgvid {
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .simplePage {
   position: absolute;
-  top: 10%;
+  top: 14%;
   left: 10px;
   width: 99%;
 }
